@@ -1,3 +1,9 @@
+2006-11-21  rpurdie,,,  <rpurdie@openedhand.com>
+
+	* Makefile.am:
+	add PANGO_CFLAGS and PANGO_LIBS (from patch in openembedded)
+
+
 2005-01-31  mallum,,,  <mallum@openedhand.com>
 
 	* test-fb.c:
